refactor: migrate the project to Java 8